# aoc_2020_rust

./: Cargo.toml
benches/: day5.rs  day6.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
