[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Nicolas Zordan <nicolas.zordan.tek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
itertools = "0.9"
lazy_static = "1.4"
criterion = "0.3"

[[bench]]
name = "day5"
harness = false

[[bench]]
name = "day6"
harness = false